--- a/test-cases.yml
+++ b/test-cases.yml
@@ -113,15 +113,15 @@
 - summary: |
     Проверка возможности просмотра информации о товаре
   requirement: |
-    Пользователь должен иметь возможность просматривать товары и просматривать подробную информацию о товаре
+    При нажатии на иконку товара сайт отображает карточку данного товара с его подробным описанием
   prerequisites: |
     открыта страница с товарами https://hexlet-products-store.vercel.app/
   test-data: |
     empty
   steps:
-   - Открыть страницу с товарами https://hexlet-products-store.vercel.app/ и нажать на товар
+   - Нажать на товар
   expected-result: |
-    Отображается карточка товара с фото и подробным описанием товара
+    Отображается карточка товара с фото и подробным описанием выбранного товара
 
 - summary: |
     Проверка возможности добавления товара в корзину с каталога
@@ -133,7 +133,9 @@
     empty
   steps:
   - на выбранных товарах нажать кнопку "add to cart" 
+  - перейти в корзину
   expected-result: |
+    Сайт отображает корзину. В корзине находятся добавленные товары.
     В корзину добавятся товары в необходимом количестве, над словом "cart"  в панели появится кол-во добавленного товара
 
 - summary: |
@@ -146,7 +148,9 @@
     empty
   steps:
   - в выбранной карточке товарах нажать кнопку "add to cart" 
+  - перейти в корзину
   expected-result: |
+    Сайт отображает корзину. В корзине находятся добавленные товары.
     В корзину добавятся товары в необходимом количестве, над словом "cart"  в панели появится кол-во добавленного товара
 
 - summary: |
@@ -172,6 +176,7 @@
     from 0 to 3
   steps:
   - на странице с товаром нажать "add to cart" три раза у выбранного товара
+  - перейти в корзину
   expected-result: |
    товар добавляется в корзину в кол-ве 3 шт
 
@@ -185,6 +190,7 @@
     empty
   steps:
   - в корзине напротив товаров нажать "add to cart"
+  - перейти в корзину
   expected-result: |
    В корзине увеличится кол-во каждого товара
 
@@ -300,14 +306,20 @@
   requirement: |
     Сайт должен быть доступен на различных устройствах
   prerequisites: |
-    Проверка адаптивности сайта на устройствах Iphone, Android, Ipad. Открыта страница сайта https://hexlet-products-store.vercel.app/
+    Проверка адаптивности сайта на различных устройствах. Открыта страница сайта https://hexlet-products-store.vercel.app/
   test-data: 
-    empty
+    Устройства Iphone, Android, Ipad
   steps:
-  - открыть Devtools
-  - нажать кнопку Toogle device toolbar
-  - выбрать устройство Iphone 12 Pro, Android, Ipad в левом верхнем углу панели 
-  - проверить как отображаются все страницы сайта
+  - Открыть Devtools
+  - Нажать кнопку Toogle device toolbar
+  - Выбрать устройство Iphone 12 Pro, Android, Ipad в левом верхнем углу панели 
+  - На странице магазина в фильтре выбрать нужную категорию товара
+  - Открыть карточку товара
+  - Добавить товар в корзину
+  - Перейти в корзину
+  - Оформить заказ путем нажатия "checkout"
+  - Вернуться на главную страницу магазина путем нажатия "Continue shopping"
+  - Проверить как отображаются все страницы сайта
   expected-result: |
    Все страницы сайта отображаются корректно на всех устройствах
 
@@ -334,11 +346,11 @@
   prerequisites: |
     Наличие различных браузеров. Открыта страница сайта https://hexlet-products-store.vercel.app
   test-data:  
-   empty
+  - Браузеры Chrome, Mozilla, Opera, Edge, Safari
   steps:
-  - проверить как отображаются все страницы сайта в браузерах Chrome, Mozilla, Opera, Edge, Safari
+  - Открыть страницу сайта https://hexlet-products-store.vercel.app
   expected-result: |
-   Все страницы сайта отображаются корректно во всех браузерах
+   Сайт отображается корректно во всех браузерах
 
 - summary: |
    Проверка Мультиязычности сайта. Отображение на русском языке
@@ -396,19 +408,6 @@
    На странице каталога отображается перечень товаров, информацией о каждом из них. Рейтинг, цена, цена со скидкой
 
 - summary: |
-   Проверка информации в карточке товара
-  requirement: |
-   На странице товара и в каталоге нужно выводить данные о товаре (название, рейтинг, цена со скидкой и без нее) 
-  prerequisites: |
-    Открыта страница с товаром https://hexlet-products-store.vercel.app/products/2
-  test-data: |
-    empty
-  steps:
-    - empty
-  expected-result: |
-   На странице с товаром отображается информация о нем. Рейтинг, цена, цена со скидкой
-
-- summary: |
    Изменение кол-ва товара на странице каталога
   requirement: |
    При добавлении товара в корзину должен изменяться остаток товара в магазине
@@ -446,3 +445,22 @@
     - В Description попробовать изменить/удалить текст
   expected-result: |
    Сайт не отзывается на манипуляции пользователя
+
+- summary: |
+   Проверка запроса при оформлении заказа
+  requirement: |
+   В запросе не должно быть ошибок
+  prerequisites: |
+    Открыта страница https://hexlet-products-store.vercel.app
+  test-data: |
+    empty
+  steps:
+    - Открыть devtools 
+    - На странице магазина в фильтре выбрать нужную категорию товара
+    - Открыть карточку товара
+    - Добавить товар в корзину
+    - Перейти в корзину
+    - Оформить заказ путем нажатия "checkout"
+    - Проверить наличие ошибок в запросе
+  expected-result: |
+   В запросе не содержится ошибок
