--- a/testing-report.yml
+++ b/testing-report.yml
@@ -16,8 +16,12 @@
   status: pass
 
 - summary: |
-    Проверка поиска товаров через фильтр по цене
+    Проверка поиска товаров через фильтр по обычной цене
   status: pass
+
+- summary: |
+    Проверка поиска товаров через фильтр по цене со скидкой
+  status: fail
 
 - summary: |
     Проверка поиска товаров через фильтр по наличию
@@ -53,7 +57,7 @@
   
 - summary: |
     Проверка возможности добавления разных товаров в корзину
-  status: pass
+  status: fail
 
 - summary: |
     Проверка отчистки определенного товара из корзины 
@@ -69,7 +73,7 @@
 
 - summary: |
     Проверка успешного оформления заказа
-  status: pass
+  status: fail
   
 - summary: |
     Проверка навигации по страницам каталога
@@ -85,7 +89,7 @@
   
 - summary: |
     Проверка адаптивности сайта
-  status: pass
+  status: fail
   
 - summary: |
     Проверка скорости загрузки страницы сайта
@@ -101,7 +105,7 @@
   
 - summary: |
     Проверка Мультиязычности сайта. Отображение на английском языке
-  status: pass 
+  status: fail 
 
 - summary: |
    Проверка оплаты заказа на сайте
@@ -109,7 +113,7 @@
   
 - summary: |
     Проверка информации о товаре в каталоге
-  status: pass
+  status: fail
 
 - summary: |
     Проверка информации в карточке товара 
