--- a/bugreports.yml
+++ b/bugreports.yml
@@ -1,5 +1,5 @@
 - summary: |
-    Поиск товара не работает на русском языке 
+    Отсутствует функция поиска товара на русском языке
   environment: |
     Версия 130.0.6723.70 (Официальная сборка), (64 бит)
     ОС Windows 10 
@@ -13,7 +13,7 @@
     На странице отображается надпись "Ничего не найдено", товар не выводится на экран
 
 - summary: |
-    Проверка возможности уменьшения товара в корзине
+    Отсутсвует функция уменьшения товара в корзине
   environment: |
     Версия 130.0.6723.70 (Официальная сборка), (64 бит)
     ОС Windows 10 
@@ -27,7 +27,7 @@
     Нет кнопки "Delete", уменьшить кол-во товара в корзине невозможно
     
 - summary: |
-    Проверка отображения товаров по хештегу 
+    Поиск отображения товаров по хештегу не работает
   environment: |
     Версия 130.0.6723.70 (Официальная сборка), (64 бит)
     ОС Windows 10 
@@ -41,7 +41,7 @@
     Остается страница с товаром "Gucci Bloom"
 
 - summary: |
-    Проверка фильтрации товаров с отрицательной ценой 
+    Фильтрация товаров по цене работает не корректно и допускает ввод отрицательных значений
   environment: |
     Версия 130.0.6723.70 (Официальная сборка), (64 бит)
     ОС Windows 10 
@@ -55,7 +55,7 @@
     вводится отрицательное значение в поле 
 
 - summary: |
-    Проверка Мультиязычности сайта. Отображение на русском языке 
+    Функция Мультиязычности сайта работает не корректно
   environment: |
     Версия 130.0.6723.70 (Официальная сборка), (64 бит)
     ОС Windows 10 
@@ -69,7 +69,7 @@
     Меняется только интерфейс, описание товара остается на английском языке
 
 - summary: |
-    Проверка оплаты заказа на сайте 
+    Нет функции оплаты заказа на сайте 
   environment: |
     Версия 130.0.6723.70 (Официальная сборка), (64 бит)
     ОС Windows 10 
@@ -85,7 +85,7 @@
    Появляется окно об успешном оформлении заказа, кнопки "Payment" нет. ЕСть возможность только закрыть заказ
 
 - summary: |
-    Изменение кол-ва товара на странице каталога 
+    Не работает изменение кол-ва товара на странице каталога 
   environment: |
     Версия 130.0.6723.70 (Официальная сборка), (64 бит)
     ОС Windows 10 
@@ -98,7 +98,7 @@
     Кол-во товара не изменилось, в корзине увеличилось кол-во товара на 1 единицу
 
 - summary: |
-    Изменение кол-ва  в карточке товара 
+    Не работает изменение кол-ва  в карточке товара 
   environment: |
     Версия 130.0.6723.70 (Официальная сборка), (64 бит)
     ОС Windows 10 
