--- a/bugreports.yml
+++ b/bugreports.yml
@@ -13,7 +13,7 @@
     На странице отображается надпись "Ничего не найдено", товар не выводится на экран
 
 - summary: |
-    Отсутсвует функция уменьшения товара в корзине
+    Отсутствует функция уменьшения товара в корзине
   environment: |
     Версия 130.0.6723.70 (Официальная сборка), (64 бит)
     ОС Windows 10 
@@ -33,7 +33,7 @@
     ОС Windows 10 
   steps-to-reproduce: |
     Зайти на сайт https://hexlet-products-store.vercel.app
-    Выбратть товар "Gucci Bloom" и перейти в его карточку
+    Выбрать товар "Gucci Bloom" и перейти в его карточку
     Перейти по хештегу #fragrances
   expected-result: |
     Сайт отображает товары связанные с хештегом #fragrances
