--- a/regress-report.yml
+++ b/regress-report.yml
@@ -128,6 +128,10 @@ test-cases:
    Неудачная попытка пользователя редактировать информацию о товаре в карточке продукта
   status: pass   
 
+- summary: |
+   Проверка запроса при оформлении заказа
+  status: pass   
+
 bugreports:
 - summary : |
     Фото товаров обрезано в каталоге
