--- a/testing-report.yml
+++ b/testing-report.yml
@@ -130,3 +130,7 @@
 - summary: |
    Неудачная попытка пользователя редактировать информацию о товаре в карточке продукта
   status: pass   
+
+- summary: |
+   Проверка запроса при оформлении заказа
+  status: pass   
