--- a/testing-report.yml
+++ b/testing-report.yml
@@ -16,11 +16,7 @@
   status: pass
 
 - summary: |
-    Проверка поиска товаров через фильтр по обычной цене
-  status: pass
-
-- summary: |
-    Проверка поиска товаров через фильтр по цене со скидкой
+    Проверка поиска товаров через фильтр по цене
   status: fail
 
 - summary: |
