--- a/test-cases.yml
+++ b/test-cases.yml
@@ -113,7 +113,7 @@
 - summary: |
     Проверка возможности просмотра информации о товаре
   requirement: |
-    При нажатии на иконку товара сайт отображает карточку данного товара с его подробным описанием
+    При нажатии на иконку товара сайт отображает карточку данного товара с его названием, подробным описанием, ценой со скидкой и без скидки, рейтингом
   prerequisites: |
     открыта страница с товарами https://hexlet-products-store.vercel.app/
   test-data: |
@@ -121,7 +121,7 @@
   steps:
    - Нажать на товар
   expected-result: |
-    Отображается карточка товара с фото и подробным описанием выбранного товара
+    Отображается карточка товара с фото, названием товара и подробным описанием выбранного товара, ценой со скидкой и без, рейтингом
 
 - summary: |
     Проверка возможности добавления товара в корзину с каталога
