--- a/bugreports.yml
+++ b/bugreports.yml
@@ -55,7 +55,7 @@
     вводится отрицательное значение в поле 
 
 - summary: |
-    Функция Мультиязычности сайта работает не корректно
+    Не полный перевод сайта на русский язык 
   environment: |
     Версия 130.0.6723.70 (Официальная сборка), (64 бит)
     ОС Windows 10 
