--- a/regress-report.yml
+++ b/regress-report.yml
@@ -5,7 +5,7 @@ test-cases:
   status: pass
 
 - summary: |
-    Проверка поиска товара в строке поиска по общему наименованию
+    Проверка поиска товара в строке поиска по общему наименованию на русском языке
   status: fail
 
 - summary: |
