--- a/test-cases.yml
+++ b/test-cases.yml
@@ -14,7 +14,7 @@
     Пользователь должен увидеть интресующий его продукт
 
 - summary: |
-    Проверка поиска товара в строке поиска по общему наименованию
+    Проверка поиска товара в строке поиска по общему наименованию на русском языке
   requirement: |
     Пользователь должен иметь возможность искать товары по ключевому слову или категории
   prerequisites: |
