--- a/bugreports.yml
+++ b/bugreports.yml
@@ -110,3 +110,22 @@
     Кол-во товара в карточке изменится на 67 шт, в корзине увеличится кол-во товара на 1 единицу
   actual-result: |
     Кол-во товара в карточке не изменилось, в корзине увеличилось кол-во товара на 1 единиц
+
+- summary: |
+    Ошибки в запросе при оформлении заказа
+  environment: |
+    Версия 130.0.6723.70 (Официальная сборка), (64 бит)
+    ОС Windows 10 
+  steps-to-reproduce: |
+    Зайти на сайт https://hexlet-products-store.vercel.app
+    Открыть devtools 
+    На странице магазина в фильтре выбрать нужную категорию товара
+    Открыть карточку товара
+    Добавить товар в корзину
+    Перейти в корзину
+    Оформить заказ путем нажатия "checkout"
+    Проверить наличие ошибок в запросе
+  expected-result: |
+    Запрос после оформления заказа не должен содержать ошибок
+  actual-result: |
+    Запрос после оформления заказа содержит ошибки
