--- a/testing-report.yml
+++ b/testing-report.yml
@@ -4,7 +4,7 @@
   status: pass
 
 - summary: |
-    Проверка поиска товара в строке поиска по общему наименованию
+    Проверка поиска товара в строке поиска по общему наименованию на русском языке
   status: fail
 
 - summary: |
