--- a/testing-report.yml
+++ b/testing-report.yml
@@ -17,7 +17,7 @@
 
 - summary: |
     Проверка поиска товаров через фильтр по цене
-  status: fail
+  status: pass
 
 - summary: |
     Проверка поиска товаров через фильтр по наличию
