--- a/testing-report.yml
+++ b/testing-report.yml
@@ -53,7 +53,7 @@
   
 - summary: |
     Проверка возможности добавления разных товаров в корзину
-  status: fail
+  status: pass
 
 - summary: |
     Проверка отчистки определенного товара из корзины 
