--- a/testing-report.yml
+++ b/testing-report.yml
@@ -101,7 +101,7 @@
   
 - summary: |
     Проверка Мультиязычности сайта. Отображение на английском языке
-  status: fail 
+  status: pass 
 
 - summary: |
    Проверка оплаты заказа на сайте
