--- a/testing-report.yml
+++ b/testing-report.yml
@@ -109,7 +109,7 @@
   
 - summary: |
     Проверка информации о товаре в каталоге
-  status: fail
+  status: pass
 
 - summary: |
     Изменение кол-ва товара на странице каталога 
