--- a/bugreports.yml
+++ b/bugreports.yml
@@ -53,7 +53,7 @@
     Не удалось ввести отрицательное значение в фильтр цен. Фильрация не срабатывает
   actual-result: |
     вводится отрицательное значение в поле 
-
+    
 - summary: |
     Не полный перевод сайта на русский язык 
   environment: |
@@ -67,6 +67,21 @@
     Интерфейс и элементы сайта отображаются корректно на русском языке, а также название и описание в карточках товаров
   actual-result: |
     Меняется только интерфейс, описание товара остается на английском языке
+
+- summary: |
+    Сайт не адаптивен для различных устройств
+  environment: |
+    Iphone XR,Ipad Mini
+    ОС IOS 12 IOS 9.3.6
+  steps-to-reproduce: |
+    Зайти на сайт https://hexlet-products-store.vercel.app
+    Открыть devtools 
+    Нажать Dimensions
+    Выбрать устройства Iphone XR/Ipad Mini
+  expected-result: |
+    Все элементы страницы отображаются корректно
+  actual-result: |
+    Некорректно отображается строка поиска, кнопки сайта 
 
 - summary: |
     Нет функции оплаты заказа на сайте 
